# poche

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  health.py  items.py
backend/app/models/: __init__.py  base.py  item.py
backend/app/services/: __init__.py  chat.py
backend/scripts/: start.sh
backend/tests/: test_api.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/cad/components/: Canvas3D.tsx  Edges.tsx  Faces.tsx  Grid.tsx  HoverIndicator.tsx  Scene.tsx  Vertices.tsx
frontend/src/cad/core/: store.ts  types.ts  utils.ts
frontend/src/cad/ui/: ChatPanel.tsx  StatusBar.tsx  Toolbar.tsx
frontend/src/pages/: Editor.tsx  Home.tsx
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/: config.py  logging_config.py  server.py
mcp-server/src/integrations/: __init__.py  fastapi.py  playwright.py  postgres.py
scripts/: generate-mcp-config.py  start-dev.sh
tests/e2e/: Dockerfile  conftest.py  debug_line_drawing.py  manual_test.py  requirements.txt  test_cad_editor.py
tests/results/: report.html
