[project]
name = "app-mcp-server"
version = "0.1.0"
description = "Unified MCP server with PostgreSQL, FastAPI, and Playwright integrations"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.28",
    "asyncpg>=0.30",
    "playwright>=1.49",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
